--- a/CNDAPowerPoint/app.config
+++ b/CNDAPowerPoint/app.config
@@ -30,7 +30,7 @@
     <userSettings>
         <CNDAPowerPoint.MySettings>
             <setting name="PptXmlFilename" serializeAs="String">
-                <value>C:\Users\Nick\Documents\Development\samplewitharray.xml</value>
+                <value />
             </setting>
         </CNDAPowerPoint.MySettings>
     </userSettings>
