--- a/CndaOutlook.vbproj
+++ b/CndaOutlook.vbproj
@@ -36,11 +36,13 @@
     </StartupObject>
     <IsWebBootstrapper>False</IsWebBootstrapper>
     <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <PublishUrl>C:\Users\Nick\Documents\Development\CNDAEmailDvd\</PublishUrl>
+    <PublishUrl>C:\Users\ngong\Documents\Development\CNDAOutlookDvd\</PublishUrl>
     <InstallUrl />
     <TargetCulture>en</TargetCulture>
-    <ApplicationVersion>1.0.0.4</ApplicationVersion>
+    <ApplicationVersion>1.0.0.5</ApplicationVersion>
     <AutoIncrementApplicationRevision>true</AutoIncrementApplicationRevision>
     <UpdateEnabled>false</UpdateEnabled>
     <UpdateInterval>0</UpdateInterval>
@@ -51,8 +53,6 @@
     <FriendlyName>CNDAEmail</FriendlyName>
     <OfficeApplicationDescription>Generates an Outlook email that includes a PDF that is generated from a PPT that conforms to the Intel CNDA watermark requriements.</OfficeApplicationDescription>
     <LoadBehavior>3</LoadBehavior>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
   </PropertyGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
@@ -262,6 +262,7 @@
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="CNDAEmail_TemporaryKey.pfx" />
+    <None Include="CndaOutlook_TemporaryKey.pfx" />
     <None Include="packages.config" />
     <None Include="ThisAddIn.Designer.xml">
       <DependentUpon>ThisAddIn.vb</DependentUpon>
@@ -369,11 +370,10 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>
-    </ManifestKeyFile>
+    <ManifestKeyFile>CndaOutlook_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>0E2E0C1F30F59780AEF5EAC6C7A60942126A12B6</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>24F40195E21D2B8EC88B981549CC10E0E5003767</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
     <MyType>Windows</MyType>
