--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -6,7 +6,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="XmlFileName" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Users\Nick\Documents\Development\samplewitharray.xml</Value>
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
