--- a/CNDAPowerPoint/CNDAPowerPoint.vbproj
+++ b/CNDAPowerPoint/CNDAPowerPoint.vbproj
@@ -42,13 +42,13 @@
     <PublishUrl>C:\Users\ngong\Documents\Development\CNDAPptDvd\</PublishUrl>
     <InstallUrl />
     <TargetCulture>en</TargetCulture>
-    <ApplicationVersion>1.0.0.3</ApplicationVersion>
+    <ApplicationVersion>1.0.0.7</ApplicationVersion>
     <AutoIncrementApplicationRevision>true</AutoIncrementApplicationRevision>
     <UpdateEnabled>true</UpdateEnabled>
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>days</UpdateIntervalUnits>
     <ProductName>CndaPowerPoint</ProductName>
-    <PublisherName />
+    <PublisherName>Nick Ong</PublisherName>
     <SupportUrl />
     <FriendlyName>CndaPowerPoint</FriendlyName>
     <OfficeApplicationDescription />
