--- a/CndaOutlook.vbproj
+++ b/CndaOutlook.vbproj
@@ -258,6 +258,7 @@
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="CNDAEmail_TemporaryKey.pfx" />
+    <None Include="CndaOutlook_1_TemporaryKey.pfx" />
     <None Include="CndaOutlook_TemporaryKey.pfx" />
     <None Include="packages.config" />
     <None Include="ThisAddIn.Designer.xml">
@@ -357,10 +358,10 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>CndaOutlook_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>CndaOutlook_1_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>24F40195E21D2B8EC88B981549CC10E0E5003767</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>F2617DF4602B904EAF75C04BE42779D7F77C1D09</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
     <MyType>Windows</MyType>
